# earningscall-python

./: .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  TODO.md  hatch.toml  pyproject.toml  setup.cfg
.claude/: settings.local.json
.github/workflows/: build.yml  publish-to-test-pypi.yml  release.yml  test.yml
earningscall/: __init__.py  api.py  calendar.py  company.py  errors.py  event.py  exchanges.py  exports.py  sectors.py  symbols.py  transcript.py  utils.py
scripts/: download_audio_files.py  download_single_audio_file.py  download_slides.py  download_sp500_audio_files.py  get_all_company_audio_files.py  get_all_company_transcripts.py  get_all_sp500_transcript_texts.py  get_calendar.py  get_single_transcript.py  list_all_companies.py  list_companies.py
tests/: symbols.yaml  test_api.py  test_company.py  test_download_audio_files.py  test_download_slide_decks.py  test_earnings_event.py  test_errors.py  test_exchanges.py  test_exports.py  test_get_calendar.py  test_get_company_events.py  test_get_sp500_companies_api.py  test_get_transcript.py  test_helper.py  test_latency_metrics.py  test_responses_mocking.py  test_sectors.py  test_simple.py  test_symbols.py  test_utils.py
tests/data/: aapl-q1-2022-advanced-data-level-2.yaml  aapl-q1-2022-advanced-data-level-3.yaml  aapl-q1-2022-advanced-data-level-4.yaml  aapl-q1-2022-speaker-name-map-v2.yaml  aapl-q1-2030-not-authorized-l2.yaml  aapl-q1-2030-not-authorized.yaml  aapl-q1-2030-not-found.yaml  aapl-q1-2030-server-error.yaml  demo-symbols-v2-alpha.yaml  demo-symbols-v2.yaml  get-calendar-500-error.yaml  get-calendar-not-found-response.yaml  get-calendar-successful-response.yaml  meta-q3-2024-not-authorized.yaml  meta-q3-2024-not-found.yaml  meta-q3-2024-other-error.yaml  meta-q3-2024-slides-not-authorized.yaml  meta-q3-2024-slides-not-found.yaml  meta-q3-2024-slides-other-error.yaml  msft-company-events.yaml  msft-q1-2022-audio-file-short-clip.yaml  msft-q1-2022-slide-deck-short-clip.yaml  msft-q1-2024-audio-file-short-clip.yaml  msft-transcript-response.yaml  nvda-q2-2025-level-4-data-missing.yaml  sp500-company-list-failed.yaml  sp500-company-list.yaml  symbols-v2-missing-edge-cases.yaml  symbols-v2.yaml  symbols.txt
