[project]
name = "earningscall"
version = "0.0.5"
description = "The EarningsCall Python library."
readme = "README.md"
authors = [
    {name = "EarningsCall", email = "dev@earningscall.biz"},
]
requires-python = ">= 3.8"
dependencies = [
    "dataclasses>=0.6",
    "dataclasses-json>=0.6.4",
    "more_itertools>=10.0.0",
    "requests>=2.30.0",
]

[project.urls]
Homepage = "https://earningscall.biz"
Documentation = "https://github.com/EarningsCall/earningscall-python"
Repository = "https://github.com/EarningsCall/earningscall-python"
Issues = "https://github.com/EarningsCall/earningscall-python/issues"
Source = "https://github.com/EarningsCall/earningscall-python"
Changelog = "https://github.com/EarningsCall/earningscall-python/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.1",
    "responses>=0.25.0",
]

[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build.targets.wheel]
packages = ["earningscall"]

#[tool.hatch.envs.test]
#dependencies = [
#    "pytest",
#    "pytest-cov",
#    "responses"
#]

[[tool.hatch.envs.test.matrix]]
python = ["3.10", "3.11"]

[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
    "responses"
]

[tool.coverage.run]
source_pkgs = ["earningscall", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
earningscall = ["earningscall"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
