[project]
name = "earningscall"
version = "0.0.10"
description = "The EarningsCall Python library."
readme = "README.md"
authors = [
    {name = "EarningsCall", email = "dev@earningscall.biz"},
]
requires-python = ">= 3.8"
dependencies = [
    "dataclasses>=0.6",
    "dataclasses-json>=0.6.4",
    "requests>=2.30.0",
    "requests-cache>=1.2.0",
]
license = { file = "LICENSE" }

[project.urls]
Homepage = "https://earningscall.biz"
Documentation = "https://github.com/EarningsCall/earningscall-python"
Repository = "https://github.com/EarningsCall/earningscall-python"
Issues = "https://github.com/EarningsCall/earningscall-python/issues"
Source = "https://github.com/EarningsCall/earningscall-python"
Changelog = "https://github.com/EarningsCall/earningscall-python/blob/master/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.metadata]
allow-direct-references = true


[tool.hatch.build.targets.wheel]
packages = ["earningscall"]



[tool.hatch.version]
path = "hatch_init/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=hatch_init --cov=tests"
no-cov = "cov --no-cov"

[[tool.hatch.envs.test.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]


[tool.hatch.envs.types]
extra-dependencies = [
    "mypy>=1.0.0",
    "responses"
]

[tool.coverage.run]
source_pkgs = ["earningscall", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
earningscall = ["earningscall"]
tests = ["tests"]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
